--- a/Hipple.ipynb
+++ b/Hipple.ipynb
@@ -33,6 +33,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "?CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "autoscroll": false,
@@ -51,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -64,10 +80,10 @@
     {
      "data": {
       "text/plain": [
-       "['peanuts, salt, water',\n 'large eggs, all-purpose flour, baking soda, buttermilk, yellow corn meal, dried sage, double-acting baking powder, unsalted butter, salt',\n 'pepper, jalapeno chilies, salt, oil, masa harina, lime juice, chili powder, cayenne pepper, onions, water, Mexican oregano, salsa, ground beef, fresh cilantro, garlic, peanut oil, cumin',\n 'peeled fresh ginger, noodles, hoisin sauce, salt, water, green onions, five-spice powder, pork tenderloin, peanut oil',\n 'short-grain rice, hot water, soy sauce, scallions, ponzu, cabbage, fresh ginger, shrimp']"
+       "[u'peanuts, salt, water',\n u'large eggs, all-purpose flour, baking soda, buttermilk, yellow corn meal, dried sage, double-acting baking powder, unsalted butter, salt',\n u'pepper, jalapeno chilies, salt, oil, masa harina, lime juice, chili powder, cayenne pepper, onions, water, Mexican oregano, salsa, ground beef, fresh cilantro, garlic, peanut oil, cumin',\n u'peeled fresh ginger, noodles, hoisin sauce, salt, water, green onions, five-spice powder, pork tenderloin, peanut oil',\n u'short-grain rice, hot water, soy sauce, scallions, ponzu, cabbage, fresh ginger, shrimp']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,6 +210,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {
     "autoscroll": false,
@@ -250,6 +280,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "source": [
+    "Well, taking out the spaces was no good."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "source": [
+    "## Adding number of ingredients as a feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def custom_preprocessor(s):\n",
+    "    \"\"\"\n",
+    "    Preprocess step for working adjusting the ingredients list in comma\n",
+    "    seperated format\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Add number of ingredients as feature\n",
+    "    s = s.lower()\n",
+    "    num_ingredients = len(s.split(\", \"))\n",
+    "    s.append(\", \" + str(num_ingredients))\n",
+    "    return s"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -262,7 +342,25 @@
    },
    "outputs": [],
    "source": [
-    "Well, taking out the spaces so that "
+    "vectorizer = CountVectorizer(preprocessor = custom_preprocessor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "model = MultinomialNB()\n",
+    "pipe = Pipeline([(\"vectorize\", vectorizer), (\"model\", model)])"
    ]
   }
  ],
