Working tiered ensemble model

--- a/Hipple.ipynb
+++ b/Hipple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -52,6 +52,17 @@
     "for item in data:\n",
     "    X.append(', '.join(item['ingredients']))\n",
     "    y.append(item['cuisine'])    \n",
+    "\n",
+    "with open('test.json') as data_file:    \n",
+    "    data = json.load(data_file)\n",
+    "\n",
+    "X_test = []\n",
+    "ID_test = []\n",
+    "for item in data:\n",
+    "    X_test.append(', '.join(item['ingredients']))\n",
+    "    ID_test.append(item['id'])    \n",
+    "\n",
+    "\n",
     "\n",
     "X_train, X_dev, y_train, y_dev = train_test_split(X, y, random_state=2)"
    ]
@@ -582,33 +593,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "autoscroll": false,
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide-type": "-"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{u'brazilian',\n u'british',\n u'cajun_creole',\n u'chinese',\n u'filipino',\n u'french',\n u'greek',\n u'indian',\n u'irish',\n u'italian',\n u'jamaican',\n u'japanese',\n u'korean',\n u'mexican',\n u'moroccan',\n u'russian',\n u'southern_us',\n u'spanish',\n u'thai',\n u'vietnamese'}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(y_train)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "ein.tags": "worksheet-0",
@@ -950,6 +934,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "source": [
+    "# Run this ensemble model on the test data and make a submission csv."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "IOError",
+     "evalue": "[Errno 0] Error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-94-d80355df3877>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m      \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"id,cuisine\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m      \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprediction\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpreds_refilled_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m          \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mID_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m          \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\",\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m          \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIOError\u001b[0m: [Errno 0] Error"
+     ]
+    }
+   ],
+   "source": [
+    "preds_test_base = pipe_non_BI.predict(X_test)\n",
+    "BI_prediction_indexes_test = [True if y == u\"BI\" else False for y in preds_test_base]\n",
+    "fill_in_BI_test = pipe_BI.predict(pd.Series(X_test)[BI_prediction_indexes_test])\n",
+    "\n",
+    "# Reconnect the predictions for the final model.\n",
+    "preds_refilled_test = pd.Series(preds_test_base)\n",
+    "preds_refilled_test[BI_prediction_indexes_test] = fill_in_BI_test\n",
+    "\n",
+    "\n",
+    "submission = pd.DataFrame({\"id\":ID_test, \"cuisine\":preds_refilled_test})\n",
+    "cols = [\"id\", \"cuisine\"]\n",
+    "submission[cols].to_csv(\"submission.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide-type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "submission = pd.DataFrame({\"id\":ID_test, \"cuisine\":preds_refilled_test})\n",
+    "cols = [\"id\", \"cuisine\"]\n",
+    "submission[cols].to_csv(\"submission.csv\", index = False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1166,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -1175,8 +1228,61 @@
      "slide-type": "-"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.800096784998\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   brazilian       0.83      0.61      0.70       121\n",
+      "     british       0.58      0.54      0.56       206\n",
+      "cajun_creole       0.79      0.74      0.76       376\n",
+      "     chinese       0.85      0.85      0.85       670\n",
+      "    filipino       0.73      0.65      0.69       190\n",
+      "      french       0.64      0.66      0.65       636\n",
+      "       greek       0.79      0.72      0.75       258\n",
+      "      indian       0.87      0.91      0.89       758\n",
+      "       irish       0.59      0.57      0.58       175\n",
+      "     italian       0.81      0.90      0.85      1963\n",
+      "    jamaican       0.88      0.68      0.77       123\n",
+      "    japanese       0.82      0.74      0.78       342\n",
+      "      korean       0.86      0.77      0.82       221\n",
+      "     mexican       0.91      0.93      0.92      1668\n",
+      "    moroccan       0.84      0.78      0.81       215\n",
+      "     russian       0.75      0.44      0.55       133\n",
+      " southern_us       0.74      0.77      0.76      1056\n",
+      "     spanish       0.67      0.45      0.53       247\n",
+      "        thai       0.82      0.82      0.82       391\n",
+      "  vietnamese       0.74      0.65      0.69       195\n",
+      "\n",
+      " avg / total       0.80      0.80      0.80      9944\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "BI_group = {\"cuisines\": [\"british\", \"irish\"], #which cuisines are included\n",
+    "            \"group_name\": \"BI\", # what sub-group this called by base model\n",
+    "            \"model\": pipe_BI} # The model which predicts the final cuisines\n",
+    "\n",
+    "def predict_ensemble_model(base_model, splits, data):\n",
+    "    preds = base_model.predict(data)\n",
+    "    for split in splits:\n",
+    "        split_prediction_indexes = [True if y == split['group_name'] else False for y in preds]\n",
+    "        fill_in_split = split['model'].predict(pd.Series(data)[split_prediction_indexes])\n",
+    "\n",
+    "        # Reconnect the predictions for the final model.\n",
+    "        preds= pd.Series(preds)\n",
+    "        preds[split_prediction_indexes] = fill_in_split\n",
+    "    return preds\n",
+    "\n",
+    "final_preds = predict_ensemble_model(pipe_non_BI, [BI_group], X_dev)\n",
+    "\n",
+    "print(metrics.f1_score(y_dev, final_preds, average='weighted'))\n",
+    "print(classification_report(y_dev, final_preds))"
+   ]
   }
  ],
  "metadata": {
